fixed button background on safari

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ ul{
     background-color: rgba(211, 211, 211, 0);
 }
 li{
+    -webkit-backdrop-filter: blur(5px) brightness(1.3) contrast(.9) saturate(1);
     backdrop-filter: blur(5px) brightness(1.3) contrast(.9) saturate(1);
     display: flex;
     align-items: center;
